--- a/client/src/components/Style.css
+++ b/client/src/components/Style.css
@@ -34,88 +34,6 @@ button {
     justify-content: space-between;
 }
 
-/* Login - Register */
-/* .login {
-    padding: 50px 75px;
-    background-color: #fff;
-    width: 100%;
-    max-width: 600px;
-    border-radius: 15px;
-}
-
-.login_heading {
-    font-size: 40px;
-    font-weight: bold;
-    color: #373941;
-    text-align: center;
-    margin-bottom: 35px;
-}
-
-.login_label {
-    font-size: 18px;
-    font-weight: bold;
-    color: #373941;
-    margin-bottom: 10px;
-    display: inline-block;
-    cursor: pointer;
-}
-
-.login_input {
-    display: block;
-    width: 100%;
-    padding: 20px;
-    border-radius: 15px;
-    background-color: #f2f3f5;
-    outline: none;
-    font-family: "Poppins", sans-serif;
-    font-size: 18px;
-    margin-bottom: 30px;
-    border: 1px solid white;
-    box-shadow: 0 5px 10px 0 rgba(55, 57, 65, 0.5);
-}
-
-.login_input:focus {
-    border-color: rgb(92, 92, 245);
-}
-
-.login_submit {
-    padding: 25px;
-    color: white;
-    font-size: 18px;
-    text-align: center;
-    border: 0;
-    outline: none;
-    display: inline-block;
-    width: 100%;
-    border-radius: 15px;
-    background-color: #82c91e;
-    font-family: "Poppins", sans-serif;
-    font-weight: 600;
-    cursor: pointer;
-    box-shadow: 0 5px 10px 0 rgba(130, 201, 30, 0.5);
-    margin-top: 25px;
-    margin-bottom: 15px;
-}
-
-.login_already {
-    text-align: center;
-    font-size: 16px;
-    color: #999;
-}
-
-.register_link {
-    color: #2979ff;
-    text-decoration: none;
-}
-
-.login_link {
-    color: red;
-    text-decoration: none;
-    font-family: "Poppins", sans-serif;
-} */
-
-/* * * * * * */
-
 /*---- Header ----*/
 header {
     background-color: #111111;
@@ -124,7 +42,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 16px 5%;
-    position: fixed;
+    /* position: fixed; */
     width: 100%;
     top: 0;
     right: 0;
@@ -208,7 +126,7 @@ header {
     font-family: 'Roboto', sans-serif;
     width: 130px;
     font-size: 16px;
-    padding: 9px 10px;
+    padding: 7px 10px;
     color: rgb(255, 255, 255);
     border: 2px solid;
     border-radius: 50px;
@@ -241,7 +159,7 @@ header {
     font-family: 'Roboto', sans-serif;
     width: 130px;
     font-size: 16px;
-    padding: 9px 10px;
+    padding: 7px 10px;
     border: 2px solid rgb(234 96 22);
     color: rgb(234 96 22);
     border-radius: 50px;
@@ -260,7 +178,7 @@ header {
     width: 130px;
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
-    padding: 9px 10px;
+    padding: 7px 10px;
     background-color: rgb(234 96 22);
     color: rgb(255, 255, 255);
     border: 2px solid;
@@ -307,7 +225,12 @@ header {
 /*---- Footer ----*/
 .footer {
 	background-color: #111111;
-	padding-top: 70px;
+    padding: 16px 5%;
+    padding-top: 50px;
+    width: 100%;
+    top: 0;
+    right: 0;
+    transition: all 0.5s ease-in-out;
 }
 
 .footer_content {
@@ -317,14 +240,14 @@ header {
 }
 
 .footer h6 {
-	font-size: 18px;
+	font-size: 20px;
     color: white;
-    margin-bottom: 8px;;
+    margin-bottom: 15px;
 }
 
 .footer p {
     margin-bottom: 16px;
-	font-size: 14px;
+	font-size: 16px;
     color: rgb(223, 223, 223);
 }
 
@@ -332,7 +255,6 @@ header {
 	text-align: left;
 	margin-bottom: 5px;
     margin-right: 30px;
-    margin-left: 30px;
 }
 
 .footer_overview p{
@@ -341,7 +263,7 @@ header {
 
 .footer_logo {
 	max-height: 33px;
-    margin-bottom: 20px
+    margin-bottom: 10px
 }
 
 .footer_icon {
@@ -360,7 +282,7 @@ header {
     text-align: center;
     margin: 0px;
     padding: 0px;
-    margin-right: 30px;
+    width: 350px;
 }
 
 .footer_category_content {
@@ -368,10 +290,20 @@ header {
     margin-right: 20px;
 }
 
+.footer_category_content a{
+    text-decoration: none;
+}
+
+.footer_category_content p:hover{
+    color: #9b9a9a;
+}
+
 .footer_category_content ul li {
     text-align: left;
 }
 
-
-
+.footer_category_content ul li {
+    text-align: left;
+    cursor: pointer;
+}
 /*---- End Foodter ----*/
