--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,42 @@
+/*---- Common Factor CSS ----*/
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
+
+html {
+    font-size: 62, 5%;
+    font-family: "Poppins", sans-serif;
+}
+
+* {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+}
+
+.container {
+    max-width: 1400px;
+    margin: 0px auto;
+    background-color: #111111;
+}
+
+ul {
+    list-style: none;
+}
+
+a {
+    text-decoration: none;
+}
+
+button {
+    border: none;
+}
+
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+}
+
+/*---- End Common Factor CSS ----*/
+
 .App {
   text-align: center;
 }
