--- a/client/src/components/Header.css
+++ b/client/src/components/Header.css
@@ -1,40 +1,3 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap');
-
-html {
-    font-size: 62, 5%;
-    font-family: "Poppins", sans-serif;
-}
-
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-}
-
-.container {
-    max-width: 1400px;
-    margin: 0px auto;
-    background-color: #111111;
-}
-
-ul {
-    list-style: none;
-}
-
-a {
-    text-decoration: none;
-}
-
-button {
-    border: none;
-}
-
-.flex-container {
-    display: flex;
-    justify-content: space-between;
-}
-
-/*---- Header ----*/
 header {
     background-color: #111111;
     height: 76px;
@@ -42,7 +5,7 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 16px 5%;
-    /* position: fixed; */
+    position: fixed;
     width: 100%;
     top: 0;
     right: 0;
@@ -128,7 +91,7 @@ header {
     font-size: 16px;
     padding: 7px 10px;
     color: rgb(255, 255, 255);
-    border: 2px solid;
+    border: 2px solid rgb(234 96 22);
     border-radius: 50px;
     margin-right: 10px;
     cursor: pointer;
@@ -140,11 +103,11 @@ header {
     color: rgb(234 96 22);
     box-shadow: 0 5px 10px 0 rgba(234, 96, 22, 0.5);
 }
-/* ??? */
+
 .header_search:focus {
-    border-color:rgb(234 96 22);
+    border-color: rgb(234 96 22);
 }
-/* ??? */
+
 
 .header_form img {
     width: 20px;
@@ -193,119 +156,3 @@ header {
     color: rgb(234 96 22);
     box-shadow: 0 5px 10px 0 rgba(234, 96, 22, 0.5);
 }
-/*---- End Header ----*/
-
-/*---- Home ----*/
-
-.show {
-    display: flex;
-}
-
-.show img {
-    width: 301px;
-    height: 170px;
-    max-width: 480px;
-    border-radius: 5px;
-}
-
-.show h1 {
-    color: #fff;
-}
-
-.show_content h3{
-    color: #fff;
-}
-
-.show_content p {
-    color: #bcbcbc;
-}
-
-/*---- End Home ----*/
-
-/*---- Footer ----*/
-.footer {
-	background-color: #111111;
-    padding: 16px 5%;
-    padding-top: 50px;
-    width: 100%;
-    top: 0;
-    right: 0;
-    transition: all 0.5s ease-in-out;
-}
-
-.footer_content {
-    display: flex;
-    flex-wrap: nowrap;
-    justify-content: space-between;
-}
-
-.footer h6 {
-	font-size: 20px;
-    color: white;
-    margin-bottom: 15px;
-}
-
-.footer p {
-    margin-bottom: 16px;
-	font-size: 16px;
-    color: rgb(223, 223, 223);
-}
-
-.footer_overview {
-	text-align: left;
-	margin-bottom: 5px;
-    margin-right: 30px;
-}
-
-.footer_overview p{
-    width: 320px;
-}
-
-.footer_logo {
-	max-height: 33px;
-    margin-bottom: 10px
-}
-
-.footer_icon {
-    padding-top: 20px;
-}
-
-.footer_icon a {
-    margin: 0 10 0 0px;
-    padding: 10px;
-    
-}
-
-.footer_icon img {
-    width: 90px;
-}
-
-.footer_category {
-    text-align: center;
-    margin: 0px;
-    padding: 0px;
-    width: 350px;
-}
-
-.footer_category_content {
-    padding: 0 15px;
-    margin-right: 20px;
-}
-
-.footer_category_content a{
-    text-decoration: none;
-}
-
-.footer_category_content p:hover{
-    color: #9b9a9a;
-}
-
-.footer_category_content ul li {
-    text-align: left;
-}
-
-.footer_category_content ul li {
-    text-align: left;
-    cursor: pointer;
-}
-/*---- End Foodter ----*/
