--- a/client/src/components/GlobalStyles/GlobalStyles.module.scss
+++ b/client/src/components/GlobalStyles/GlobalStyles.module.scss
@@ -5,8 +5,13 @@
 :root {
   --primary: #ea6016;
   --black: #000;
-  --while: #fff;
+  --white: #fff;
   --text-color: #373941;
+  --gradient-to-bottom-black: linear-gradient(to bottom, rgba(20,20,20,0.3), rgba(20,20,20,0.8));
+  --red: red;
+  --header-box-shadow-button-hover: rgba(234, 96, 22, 0.5);
+  --footer-background-color: #111111;
+  --text-title-describe: #bcbcbc;
 }
 
 html {
