--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -22,7 +22,7 @@ header {
   font-family: "Roboto", sans-serif;
   font-weight: 700px;
   font-size: 20px;
-  color: rgb(255, 255, 255);
+  color: var(--white);
   text-decoration: none;
 }
 
@@ -30,7 +30,7 @@ header {
   font-family: "Roboto", sans-serif;
   font-weight: 700px;
   font-size: 20px;
-  color: rgb(255, 255, 255);
+  color: var(--white);
   text-decoration: none;
 }
 
@@ -38,7 +38,7 @@ header {
   font-family: "Roboto", sans-serif;
   font-weight: 700px;
   font-size: 20px;
-  color: rgb(255, 255, 255);
+  color: var(--white);
   text-decoration: none;
 }
 
@@ -59,7 +59,7 @@ header {
 }
 
 .header_nav_links li a:hover {
-  color: rgb(234 96 22);
+  color: var(--primary);
 }
 
 .header_nav_links > li > a {
@@ -70,7 +70,7 @@ header {
   content: "";
   height: 2px;
   width: 0;
-  background-color: red;
+  background-color: var(--red);
   position: absolute;
   bottom: -5px;
   transition: 0.4s cubic-bezier(0.19, 1, 0.22, 1);
@@ -90,20 +90,20 @@ header {
   font-size: 16px;
   padding: 7px 10px;
   color: var(--black);
-  border: 2px solid rgb(234 96 22);
+  border: 2px solid var(--primary);
   border-radius: 50px;
   margin-right: 10px;
   cursor: pointer;
   transition: all 0.3s ease 0s;
 
   &:hover {
-    border: 2px solid rgb(234 96 22);
-    color: rgb(234 96 22);
-    box-shadow: 0 5px 10px 0 rgba(234, 96, 22, 0.5);
+    border: 2px solid var(--primary);
+    color: var(--primary);
+    box-shadow: 0 5px 10px 0 var(--header-box-shadow-button-hover);
   }
 
   :focus {
-    border-color: rgb(234 96 22);
+    border-color: var(--primary);
   }
 }
 
@@ -121,17 +121,17 @@ header {
   width: 130px;
   font-size: 16px;
   padding: 7px 10px;
-  border: 2px solid rgb(234 96 22);
-  color: rgb(234 96 22);
+  border: 2px solid var(--primary);
+  color: var(--primary);
   border-radius: 50px;
   margin-right: 10px;
   cursor: pointer;
   transition: all 0.3s ease 0s;
 
   &:hover {
-    background-color: rgb(234 96 22);
-    color: rgb(255, 255, 255);
-    box-shadow: 0 5px 10px 0 rgba(234, 96, 22, 0.5);
+    background-color: var(--primary);
+    color: var(--white);
+    box-shadow: 0 5px 10px 0 var(--header-box-shadow-button-hover);
   }
 }
 
@@ -140,17 +140,17 @@ header {
   font-family: "Roboto", sans-serif;
   font-size: 16px;
   padding: 7px 10px;
-  background-color: rgb(234 96 22);
-  color: rgb(255, 255, 255);
+  background-color: var(--primary);
+  color: var(--white);
   border: 2px solid;
   border-radius: 50px;
   cursor: pointer;
   transition: all 0.3s ease 0s;
 
   &:hover {
-    background-color: rgb(255, 255, 255);
-    border: 2px solid rgb(234 96 22);
-    color: rgb(234 96 22);
-    box-shadow: 0 5px 10px 0 rgba(234, 96, 22, 0.5);
+    background-color: var(--white);
+    border: 2px solid var(--primary);
+    color: var(--primary);
+    box-shadow: 0 5px 10px 0 var(--header-box-shadow-button-hover);
   }
 }
