--- a/client/src/page/Register/Register.module.scss
+++ b/client/src/page/Register/Register.module.scss
@@ -1,13 +1,18 @@
 .register {
   padding: 50px 75px;
-  background-color: var(--while);
-  width: 100%;
+  background-color: #242424;
+  width: 520px;
   max-width: 600px;
   border-radius: 15px;
   font-weight: bold;
-  color: var(--text-color);
+  color: var(--white);
   font-size: 1.8rem;
   margin: 76px auto;
+
+  .notify {
+    color: red;
+    text-align: center;
+  }
 }
 
 .register_heading {
@@ -23,27 +28,47 @@
 
 .register_input {
   display: block;
+  height: 44px;
   width: 100%;
+  border-radius: 8px;
+  background-color: #353434;
+  color: var(--white);
   padding: 20px;
-  border-radius: 15px;
-  background-color: #f2f3f5;
   outline: none;
-  margin-bottom: 30px;
+  margin: 8px 0 30px;
   border: 1px solid var(--while);
-  box-shadow: 0 5px 10px 0 rgba(55, 57, 65, 0.5);
+  // box-shadow: 0 5px 10px 0 rgba(55, 57, 65, 0.5);
+
+  &:focus {
+    border: 1px solid var(--primary);
+  }
+}
+
+.password_input {
+  position: relative;
+
+  .hide_icon {
+    position: absolute;
+    top: 4px;
+    right: 16px;
+  }
+
+  &:hover {
+    cursor: pointer;
+  }
 }
 
 .register_submit {
   font-size: 1.8rem;
   color: var(--while);
   width: 100%;
-  height: 50px;
-  border-radius: 15px;
-  background-color: #82c91e;
+  height: 44px;
+  border-radius: 8px;
+  background-color: #929292;
 
   &:hover {
     opacity: 0.9;
-    background-color: rgb(234, 96, 22);
+    background-color: var(--primary);
   }
 }
 
@@ -52,12 +77,9 @@
   font-size: 1.6rem;
   color: #999;
   text-decoration: none;
-}
-
-.register_link {
-  color: #2979ff;
+  margin-top: 32px;
 }
 
 .login_link {
-  color: red;
+  color: var(--primary) !important;
 }
