--- a/client/src/components/GlobalStyles/GlobalStyles.module.scss
+++ b/client/src/components/GlobalStyles/GlobalStyles.module.scss
@@ -7,6 +7,7 @@
   --black: #000;
   --white: #fff;
   --text-color: #373941;
+  --main-background-color:#242424;
   --gradient-to-bottom-black: linear-gradient(to bottom, rgba(20,20,20,0.3), rgba(20,20,20,0.8));
   --red: red;
   --header-box-shadow-button-hover: rgba(234, 96, 22, 0.5);
