--- a/client/src/page/ListEpisode/ListEpisode.module.scss
+++ b/client/src/page/ListEpisode/ListEpisode.module.scss
@@ -9,8 +9,14 @@
   padding-top: 25%;
   padding-right: 10%;
   padding-left: 10%;
-  background-image:
-    linear-gradient(to top, rgb(20, 20, 20, 1) 42.8%, rgb(20, 20, 20, 0.9) 50%, rgba(20, 20, 20, 0) 60%), url('https://cdn.popsww.com/popsapp/assets/images/series/bg-series-new.png');
+  background-image: linear-gradient(
+      to top,
+      rgb(20, 20, 20, 1) 42.8%,
+      rgb(20, 20, 20, 0.9) 50%,
+      rgba(20, 20, 20, 0) 60%
+    ),
+    url("https://cdn.popsww.com/popsapp/assets/images/series/bg-series-new.png");
+  // background-repeat: no-repeat;
   padding-bottom: 100px;
 }
 
@@ -67,4 +73,8 @@
   font-weight: 800;
   color: white;
   margin: 5px;
+}
+
+// Navbar
+.navbar {
 }
