--- a/client/src/components/Footer/Footer.module.scss
+++ b/client/src/components/Footer/Footer.module.scss
@@ -1,5 +1,5 @@
 .footer {
-	background-color: var(--footer-background-color);
+    background-color: var(--footer-background-color);
     padding: 16px 5%;
     padding-top: 50px;
     width: 100%;
@@ -14,30 +14,35 @@
     justify-content: space-between;
 }
 
+.flex-container {
+    display: flex;
+    justify-content: space-between;
+}
+
 .footer h6 {
-	font-size: 20px;
+    font-size: 20px;
     color: var(--white);
     margin-bottom: 15px;
 }
 
 .footer p {
     margin-bottom: 16px;
-	font-size: 16px;
+    font-size: 16px;
     color: rgb(223, 223, 223);
 }
 
 .footer_overview {
-	text-align: left;
-	margin-bottom: 5px;
+    text-align: left;
+    margin-bottom: 5px;
     margin-right: 30px;
 }
 
-.footer_overview p{
+.footer_overview p {
     width: 320px;
 }
 
 .footer_logo {
-	max-height: 33px;
+    max-height: 33px;
     margin-bottom: 10px
 }
 
@@ -47,8 +52,7 @@
 
 .footer_icon a {
     margin: 0 10 0 0px;
-    padding: 10px;
-    
+    padding: 5px;
 }
 
 .footer_icon img {
@@ -67,11 +71,11 @@
     margin-right: 20px;
 }
 
-.footer_category_content a{
+.footer_category_content a {
     text-decoration: none;
 }
 
-.footer_category_content p:hover{
+.footer_category_content p:hover {
     color: #9b9a9a;
 }
 
