--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -7,8 +7,6 @@ header {
   padding: 16px 5%;
   position: fixed;
   width: 100%;
-  top: 0;
-  right: 0;
   border-bottom: 1px solid #272727;
   transition: all 0.5s ease-in-out;
   z-index: 10;
@@ -101,9 +99,9 @@ header {
     box-shadow: 0 5px 10px 0 var(--header-box-shadow-button-hover);
   }
 
-  :focus {
+  &:focus {
     outline: none !important;
-    border-color: var(--primary);
+    border-color: rgb(234 96 22);
     color: rgb(234 96 22);
   }
 }
