--- a/client/src/page/Home/HotSlide/HotSlide.module.scss
+++ b/client/src/page/Home/HotSlide/HotSlide.module.scss
@@ -1,13 +1,12 @@
 .mySlides-img {
-    width: 219px;
-    height: 219px;
-    text-align: center;
-    object-fit: cover;
-    padding: 10px;
-    cursor: pointer;
-  }
-  
-  .mySlides-img:hover {
-    width: 225px;
-    height: 225px;
-  }
+  width: 219px;
+  height: 219px;
+  text-align: center;
+  object-fit: cover;
+  padding: 10px;
+  cursor: pointer;
+}
+
+.mySlides-img:hover {
+  transform: scale(110%);
+}
