[REACT] Sửa tên phim bị quá dài trang home

--- a/client/src/page/Home/CardFilm/CardFilm.module.scss
+++ b/client/src/page/Home/CardFilm/CardFilm.module.scss
@@ -49,12 +49,21 @@
 }
 
 .text-card {
+  width: 100%;
   text-align: center;
   padding-top: 10px;
 }
 
 .text-card .name {
-  font-size: 22px;
-  font-weight: 500;
+  width: 100%;
+  line-height: 2.8rem;
+  font-size: 2rem;
+  font-weight: 700;
   color: #fff;
+  display: -webkit-box;
+  -webkit-line-clamp: 1;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  margin-bottom: 10px;
 }
