--- a/client/src/page/ListEpisode/ListEpisode.module.scss
+++ b/client/src/page/ListEpisode/ListEpisode.module.scss
@@ -78,3 +78,17 @@
 // Navbar
 .navbar {
 }
+
+// Loanding Icon
+
+.loading-wrapper {
+  padding: 150px 0;
+  display: flex;
+  width: 100%;
+  justify-content: center;
+  background-color: rgb(20, 20, 20);
+  .loading-icon {
+    font-size: 120px;
+    color: var(--white);
+  }
+}
