--- a/client/src/page/Register/Register.module.scss
+++ b/client/src/page/Register/Register.module.scss
@@ -1,7 +1,7 @@
 .background-register {
   background-image: var(--gradient-to-bottom-black),
     url("https://wallpapercave.com/wp/wp4916205.jpg");
-  height: 100%;
+  height: 100vh;
   display: flex;
   align-items: center;
 }
