--- a/client/src/page/Home/HotSlide/HotSlide.module.scss
+++ b/client/src/page/Home/HotSlide/HotSlide.module.scss
@@ -5,8 +5,10 @@
   object-fit: cover;
   padding: 10px;
   cursor: pointer;
+  transition-duration: 0.5s;
 }
 
 .mySlides-img:hover {
   transform: scale(110%);
+  filter: drop-shadow(0px 0px 10px var(--primary));
 }
