PW-78:[REACT] Sửa lại hiển thị người dùng và thêm menu user

--- a/client/src/components/Header/User/User.module.scss
+++ b/client/src/components/Header/User/User.module.scss
@@ -1,29 +1,5 @@
-.comment-avatar {
-    width: 10%;
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    padding: 7px 10px;
-    background-color: var(--primary);
-    color: var(--white);
-    border: 2px solid;
-    border-radius: 50px;
-    cursor: pointer;
-    transition: all 0.3s ease 0s;
-    margin-left: 20px;
-    &:hover {
-        background-color: var(--white);
-        border: 2px solid var(--primary);
-        color: var(--primary);
-        box-shadow: 0 5px 10px 0 var(--header-box-shadow-button-hover);
-    }
-
-    img {
-        width: 33px;
-        height: 33px;
-        border-radius: 50%;
-    }
-
-    span {
-        margin-left: 10px;
-    }
+.user-avatar {
+  height: 40px;
+  width: 40px;
+  border-radius: 999px;
 }
