--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -155,3 +155,10 @@ header {
 }
 
 //navbar
+
+// Responsive
+@media only screen and (max-width: 1350px) {
+  .container {
+    display: none;
+  }
+}
