--- a/client/src/components/Footer/Footer.module.scss
+++ b/client/src/components/Footer/Footer.module.scss
@@ -11,7 +11,7 @@
 .footer_content {
   display: flex;
   flex-wrap: nowrap;
-  justify-content: space-between;
+  justify-content: center;
 }
 
 .flex-container {
@@ -88,9 +88,27 @@
   cursor: pointer;
 }
 
+// Responsive
 @media only screen and (max-width: 1350px) {
   .footer_content {
     flex-wrap: wrap;
-    justify-content: center;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .footer_overview {
+    padding-right: 4px;
+    margin-right: 0;
+    p {
+      width: 100%;
+    }
+
+    .footer_icon {
+      display: flex;
+    }
+  }
+
+  p {
+    font-size: 1rem !important;
   }
 }
