--- a/client/src/components/Header/Search/Search.module.scss
+++ b/client/src/components/Header/Search/Search.module.scss
@@ -1,6 +1,7 @@
 .search {
   flex: 1;
   display: flex;
+  max-width: 360px;
   height: 40px;
   align-items: center;
   background-color: #323232;
@@ -12,7 +13,8 @@
   .search-input {
     outline: none;
     border: none;
-    height: 40px;
+    flex: 1;
+    height: 100%;
     background-color: #323232;
     border-top-left-radius: 999px;
     border-bottom-left-radius: 999px;
@@ -81,4 +83,15 @@
 
 .search-input:focus ~ .loading {
   background-color: #252525;
+}
+
+// Responsive
+@media only screen and (max-width: 500px) {
+  .search-input {
+    flex: none;
+    width: 100%;
+    min-width: 100px;
+    font-size: 1rem;
+    line-height: 1rem;
+  }
 }
