--- a/client/src/page/Home/CardFilm/CardFilm.module.scss
+++ b/client/src/page/Home/CardFilm/CardFilm.module.scss
@@ -24,6 +24,7 @@
   padding: 5px 10px;
   background-color: rgb(234 96 22);
   transition: all 0.3s ease;
+  z-index: 1;
 }
 
 .practice:hover {
@@ -32,20 +33,26 @@
 
 .image-card {
   margin-bottom: 10px;
+  width: 210px;
+  height: 320px;
+  overflow: hidden;
+  border-radius: 10px;
+  box-shadow: 2px 2px 16px transparent;
+
+  &:hover {
+    box-shadow: 2px 2px 16px var(--primary);
+  }
 }
 
 .image-card .film-img {
-  width: 210px;
-  height: 320px;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  border-radius: 10px;
-  border: 3px solid rgb(234 96 22);
+  transition: all 0.3s ease 0s;
 }
 
 .image-card .film-img:hover {
-  width: 215px;
-  height: 325px;
-  box-shadow: 0 3px 20px 0 rgba(234, 96, 22, 0.5);
+  transform: scale(110%);
 }
 
 .text-card {
