--- a/client/src/page/Home/Home.module.scss
+++ b/client/src/page/Home/Home.module.scss
@@ -78,36 +78,14 @@
 .navigation-auto div:not(:last-child) {
   margin-right: 40px;
 }
+.img-hot-series {
+  width: 100%;
+  overflow: hidden;
 
-.text-heading h3 {
-  font-family: "Roboto", sans-serif;
-  font-size: 36px;
-  color: #fff;
-  margin-bottom: 30px;
-  display: block;
+  .mySlides {
+    width: 100%;
+  }
 }
-
-.text-description p {
-  font-family: "Roboto", sans-serif;
-  color: #bcbcbc;
-  font-size: 16px;
-  margin-bottom: 15px;
-}
-
-.text-description p span {
-  color: #fff;
-}
-
-.button-slider {
-  font-family: "Roboto", sans-serif;
-  color: #fff;
-  font-size: 20px;
-  background-image: linear-gradient(90deg, #f80, #ea3c2a 50%, #f80);
-  padding: 15px 40px;
-  border-radius: 10px;
-  cursor: pointer;
-}
-
 .text-hot-series h3 {
   font-family: "Roboto", sans-serif;
   font-size: 36px;
@@ -214,8 +192,8 @@
   }
 }
 
-@media only screen and (max-width: 1350px) {
-  .slider {
-    display: none;
+@media only screen and (max-width: 1000px) {
+  .text-hot-series {
+    margin-top: 76px;
   }
 }
