--- a/client/src/page/Home/HotSlide/HotSlide.module.scss
+++ b/client/src/page/Home/HotSlide/HotSlide.module.scss
@@ -1,6 +1,6 @@
 .mySlides-img {
-  width: 219px;
-  height: 219px;
+  width: 100%;
+  height: 100%;
   text-align: center;
   object-fit: cover;
   padding: 10px;
@@ -12,3 +12,11 @@
   transform: scale(110%);
   filter: drop-shadow(0px 0px 10px var(--primary));
 }
+
+@media only screen and (max-width: 1000px) {
+  .last {
+    display: none;
+  }
+}
+
+
