PW-44:Chỉnh transparent

--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -1,5 +1,6 @@
 header {
-  background-color: rgba($color: #151515, $alpha: 0.5);
+  // background-color: rgba($color: #151515, $alpha: 0.5);
+  background-color: transparent;
   height: 76px;
   display: flex;
   justify-content: space-between;
@@ -9,14 +10,11 @@ header {
   width: 100%;
   transition: all 0.5s ease-in-out;
   z-index: 10;
-
-  &:hover {
-    background-color: #151515;
-  }
 }
 
 .background-header-scroll {
   background-color: #000000;
+  opacity: 0.9;
 }
 
 .header img {
@@ -68,11 +66,11 @@ header {
   color: var(--primary);
 }
 
-.header_nav_links>li>a {
+.header_nav_links > li > a {
   position: relative;
 }
 
-.header_nav_links>li>a::before {
+.header_nav_links > li > a::before {
   content: "";
   height: 2px;
   width: 0;
@@ -82,7 +80,7 @@ header {
   transition: 0.4s cubic-bezier(0.19, 1, 0.22, 1);
 }
 
-.header_nav_links>li:hover>a::before {
+.header_nav_links > li:hover > a::before {
   width: 100%;
 }
 
