--- a/client/src/page/Home/Home.module.scss
+++ b/client/src/page/Home/Home.module.scss
@@ -92,7 +92,7 @@
 .text-hot-series h3 {
   font-family: "Roboto", sans-serif;
   font-size: 36px;
-  color: #fff;
+  color: var(--white);
 }
 
 .text-hot-series h3 button {
@@ -126,7 +126,7 @@
 .text-content h3 {
   font-family: "Roboto", sans-serif;
   font-size: 36px;
-  color: #fff;
+  color: var(--white);
   padding-bottom: 30px;
 }
 
@@ -142,34 +142,34 @@
 .pagination {
   padding: 25px 0;
   text-align: center;
-  background-color: #151515;
 }
 
 .pagination .page {
   display: inline-block;
   font-size: 16px;
   font-weight: 700;
-  color: #fff;
+  color: var(--white);
   text-align: center;
   margin: 2px;
   padding: 5px 1rem;
-  background-color: #666666;
+  &:hover{
+    opacity: 0.7;
+  }
 }
 
 .pagination a.active {
-  color: #151515;
-  background-color: white;
+  color: var(--primary);
 }
 
 .pagination a:hover {
-  border-color: #fff;
+  border-color: var(--white);
 }
 
 .pagination span {
   display: inline-block;
   font-size: 16px;
   font-weight: 700;
-  color: #fff;
+  color: var(--white);
   padding-left: 10px;
   padding-right: 15px;
 }
