--- a/client/src/page/ListEpisode/ListEpisode.module.scss
+++ b/client/src/page/ListEpisode/ListEpisode.module.scss
@@ -106,3 +106,12 @@
     color: var(--white);
   }
 }
+
+// Responsive
+@media only screen and (max-width: 550px) {
+  .layout_up {
+    span {
+      font-size: 1.2rem;
+    }
+  }
+}
