--- a/client/src/components/Header/Header.module.scss
+++ b/client/src/components/Header/Header.module.scss
@@ -10,6 +10,7 @@ header {
   width: 100%;
   transition: all 0.5s ease-in-out;
   z-index: 10;
+  overflow: hidden;
 }
 
 .background-header-scroll {
@@ -22,13 +23,11 @@ header {
   cursor: pointer;
 }
 
-
 .header_nav_links {
   list-style: none;
   text-align: center;
   margin-top: 15px;
 }
-
 
 .header_register {
   font-family: "Roboto", sans-serif;
@@ -80,12 +79,20 @@ header {
 //navbar
 
 // Responsive
-@media only screen and (max-width: 1210px) {
+@media only screen and (max-width: 1320px) {
   header {
     justify-content: space-between;
+    padding: 16px 0;
   }
 
   .container {
+    display: none;
+  }
+}
+
+@media only screen and (max-width: 750px) {
+  .header_register,
+  .header_login {
     display: none;
   }
 }
