--- a/client/src/components/Header/User/User.module.scss
+++ b/client/src/components/Header/User/User.module.scss
@@ -1,6 +1,8 @@
 .wrapper {
-  height: 40px;
-  width: 40px;
+  margin: 0 8px;
+  height: 100%;
+  display: flex;
+  align-items: center;
 }
 
 .user-avatar {
