--- a/client/src/components/Navbar/Navbar.module.scss
+++ b/client/src/components/Navbar/Navbar.module.scss
@@ -32,7 +32,8 @@
 
 //Tab item
 .container {
-  width: 770px;
+  width: 100%;
+  max-width: 770px;
   min-height: 150px;
   margin: 0 auto;
   padding: 32px;
@@ -47,6 +48,7 @@
 
   .more__content {
     width: 100%;
+    height: 100%;
     padding: 12px;
     color: var(--white);
     font-size: 1.6rem;
@@ -63,22 +65,17 @@
       box-shadow: 2px 2px 16px var(--primary);
     }
 
-    & > img{
-      width: 254px !important;
-      height: 355px !important;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      text-align: center;
+      transition: all 0.3s ease 0s;
     }
   }
-
-  .more__content-img img {
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-    text-align: center;
-    transition: all 0.3s ease 0s;
-  }
-  .more__content-img img:hover {
-    transform: scale(110%);
-  }
+}
+.more__content-img img:hover {
+  transform: scale(110%);
 }
 
 .more__content-info {
@@ -118,7 +115,8 @@
 .user-comment {
   position: relative;
   height: 44px;
-  width: 706px;
+  max-width: 706px;
+  width: 100%;
   font-size: 1.6rem;
   color: var(--white);
   display: flex;
@@ -145,7 +143,7 @@
   input {
     width: 100%;
     margin: 2px 0;
-    padding-left: 16px;
+    padding: 0 16px;
     line-height: 4rem;
     color: #4b4b4b;
     border: none;
@@ -180,7 +178,8 @@
   display: none;
   justify-content: space-between;
   align-items: center;
-  width: 600px;
+  max-width: 600px;
+  width: 85%;
   height: 32px;
   padding: 8px;
   background-color: rgb(20, 20, 20);
@@ -204,7 +203,8 @@
 
 // List comment
 .list-container {
-  width: 688px;
+  width: 100%;
+  max-width: 688px;
   height: 710px;
   padding: 20px 18px 20px 0;
   margin-top: 8px;
@@ -227,4 +227,28 @@
   }
 }
 
+// Responsive
+@media only screen and (max-width: 600px) {
+  .more__content-img {
+    min-width: 128px !important;
+    max-width: 128px !important;
+  }
 
+  .more__content-info {
+    font-size: 1.2rem;
+  }
+}
+
+@media only screen and (max-width: 400px) {
+  .Tabs {
+    span {
+      font-size: 1.4rem;
+    }
+  }
+}
+
+@media only screen and (max-width: 350px) {
+  .more__content-info {
+    font-size: 1rem;
+  }
+}
