PW-105: resolve conflict

--- a/client/src/page/Admin/FilmAdmin/FilmAdmin.module.scss
+++ b/client/src/page/Admin/FilmAdmin/FilmAdmin.module.scss
@@ -16,7 +16,8 @@
   border-collapse: collapse;
   margin: 25px 0;
   font-size: 15px;
-  min-width: 100%;
+  width: 100%;
+  max-width: 1230px;
   overflow: hidden;
   border-radius: 5px 5px 0 0;
 }
@@ -25,7 +26,7 @@
   text-align: center;
 }
 
-table thead tr {
+.table thead tr {
   color: #fff;
   background: #3498db;
   text-align: left;
@@ -74,10 +75,14 @@ table thead tr {
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
   width: 250px;
   margin-left: 80%;
-}
 
-.search:hover input {
-  width: 250px;
+  &:hover input {
+    width: 100%;
+  }
+
+  &:focus-within input {
+    width: 100%;
+  }
 }
 
 .search input {
@@ -128,6 +133,37 @@ table thead tr {
   color: #3498db;
   padding-left: 10px;
   padding-right: 15px;
+
+  .page {
+    display: inline-block;
+    font-size: 16px;
+    margin-left: 16px;
+    font-weight: 700;
+    color: #3498db;
+    height: 30px;
+    width: 30px;
+    line-height: 30px;
+    text-align: center;
+
+    &:nth-last-child(2) {
+      margin-right: 16px;
+    }
+
+    &:hover {
+      color: var(--primary);
+      cursor: pointer;
+    }
+  }
+
+  .page.active {
+    color: var(--primary);
+    cursor: default;
+  }
+  .next:hover,
+  .prev:hover {
+    color: var(--primary);
+    cursor: pointer;
+  }
 }
 
 .container {
