--- a/client/src/page/Information/Information.module.scss
+++ b/client/src/page/Information/Information.module.scss
@@ -1,12 +1,16 @@
-
 .body {
-    height: 100vh;
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
     padding: 10px;
     background: #151515;
     font-family: "Roboto", sans-serif;
+}
+
+.information {
+    padding-top: 80px;
+    padding-bottom: 30px;
 }
 
 .container {
@@ -38,8 +42,8 @@
 }
 
 .avatar_user {
-    padding-top: 30px;
-    padding-bottom: 15px;
+    padding-top: 20px;
+    padding-bottom: 10px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -52,8 +56,7 @@
     height: 150px;
     width: 150px;
     border-radius: 50%;
-    padding: 3px;
-    margin-bottom: 10px;
+    margin-bottom: 30px;
 }
 
 .image .profile-img {
@@ -62,6 +65,29 @@
     object-fit: cover;
     border-radius: 50%;
     border: 3px solid #fff;
+}
+
+.update_avatar a {
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    padding: 3px;
+    margin-bottom: 10px;
+    background-color: white;
+    border: 3px solid #ea6016;
+    color: #ea6016;
+    font-size: 18px;
+    text-align: center;
+    margin-top: -10%;
+    margin-left: 4%;
+    cursor: pointer;
+}
+
+.update_avatar a:hover {
+    background-color: #ea6016;
+    color: white;
+    border: 3px solid white;
 }
 
 .text-data .name {
@@ -76,37 +102,6 @@
     flex-wrap: wrap;
     justify-content: space-between;
     margin: 20px 0 12px 0;
-}
-
-.user-details .input-box {
-    margin-bottom: 15px;
-    width: calc(100% / 2 - 20px);
-}
-
-.input-box span.details {
-    color: white;
-    display: block;
-    font-weight: 500;
-    margin-bottom: 5px;
-}
-
-.user-details .input-box input, select {
-    height: 45px;
-    width: 100%;
-    outline: none;
-    font-size: 16px;
-    border-radius: 5px;
-    padding-left: 15px;
-    border: 1px solid #ccc;
-    border-bottom-width: 2px;
-    transition: all 0.3s ease;
-}
-
-.user-details .input-box input:focus,
-.user-details .input-box input:valid,
-.user-details .input-box select:focus,
-.user-details .input-box select:valid {
-    border-color: #ea6016;
 }
 
 .category {
@@ -139,13 +134,6 @@
 
 form .button input:hover {
     background-image: linear-gradient(90deg, #ea3c2a, #f80 50%, #ea3c2a);
-}
-
-
-.text-placeholder {
-    color: red;
-    font-style: italic;
-    font-size: 14px;
 }
 
 @media(max-width: 584px) {
