--- a/client/src/page/Admin/componentsAdmin/HeaderAdmin/HeaderAdmin.module.scss
+++ b/client/src/page/Admin/componentsAdmin/HeaderAdmin/HeaderAdmin.module.scss
@@ -1,63 +1,71 @@
 .header {
-    z-index: 1;
-    background: #22242A;
-    position: fixed;
-    width: calc(100% - 0%);
-    height: 70px;
-    display: flex;
-    top: 0;
+  z-index: 1;
+  background: #22242a;
+  position: fixed;
+  width: calc(100% - 0%);
+  height: 70px;
+  display: flex;
+  top: 0;
 }
 
 .header-logo {
-    width: 100px;
+  width: 100px;
 }
 
 .header .header-menu {
-    width: calc(100% - 0%);
-    height: 100%;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 0 20px;
+  width: calc(100% - 0%);
+  height: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
 }
 
 .header .header-menu .sidebar-btn {
-    color: #fff;
-    position: absolute;
-    margin-left: 240px;
-    font-size: 22px;
-    font-weight: 900;
-    cursor: pointer;
-    transition: 0.3s;
-    transition-property: color;
+  color: #fff;
+  position: absolute;
+  margin-left: 240px;
+  font-size: 22px;
+  font-weight: 900;
+  cursor: pointer;
+  transition: 0.3s;
+  transition-property: color;
 }
 
 .header .header-menu .sidebar-btn:hover {
-    color: #4CCEE8;
+  color: #4ccee8;
 }
 
 .header .header-menu ul {
-    display: flex;
+  height: 100%;
+  display: flex;
+  margin: 0;
+  padding: 0;
+
+  li {
+    margin: 0;
+    padding: 0;
+  }
 }
 
-.header-menu p{
-    margin-bottom: 20px;
+.header-menu p {
+  margin-bottom: 20px;
 }
 .header .header-menu ul li a {
-    background: #fff;
-    color: #000;
-    display: block;
-    margin: 0 10px;
-    font-size: 18px;
-    width: 34px;
-    height: 34px;
-    line-height: 35px;
-    text-align: center;
-    border-radius: 50%;
-    transition: 0.3s;
+  background: #fff;
+  color: #000;
+  display: block;
+  margin: 0 10px;
+  font-size: 18px;
+  width: 34px;
+  height: 34px;
+  line-height: 35px;
+  text-align: center;
+  border-radius: 50%;
+  transition: 0.3s;
 }
 
 .header .header-menu ul li a:hover {
-    background: #4CCEE8;
-    color: #fff;
+  background: #4ccee8;
+  color: #fff;
 }
