--- a/client/src/components/Admin/HeaderAdmin/HeaderAdmin.module.scss
+++ b/client/src/components/Admin/HeaderAdmin/HeaderAdmin.module.scss
@@ -1,27 +1,27 @@
 .header {
     z-index: 1;
-    background: #22242A;
+    background: #22242a;
     position: fixed;
     width: calc(100% - 0%);
     height: 70px;
     display: flex;
     top: 0;
-}
-
-.header-logo {
+  }
+  
+  .header-logo {
     width: 100px;
-}
-
-.header .header-menu {
+  }
+  
+  .header .header-menu {
     width: calc(100% - 0%);
     height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px;
-}
-
-.header .header-menu .sidebar-btn {
+    padding-right: 20px;
+  }
+  
+  .header .header-menu .sidebar-btn {
     color: #fff;
     position: absolute;
     margin-left: 240px;
@@ -30,20 +30,28 @@
     cursor: pointer;
     transition: 0.3s;
     transition-property: color;
-}
-
-.header .header-menu .sidebar-btn:hover {
-    color: #4CCEE8;
-}
-
-.header .header-menu ul {
+  }
+  
+  .header .header-menu .sidebar-btn:hover {
+    color: #4ccee8;
+  }
+  
+  .header .header-menu ul {
+    height: 100%;
     display: flex;
-}
-
-.header-menu p{
+    margin: 0;
+    padding: 0;
+  
+    li {
+      margin: 0;
+      padding: 0;
+    }
+  }
+  
+  .header-menu p {
     margin-bottom: 20px;
-}
-.header .header-menu ul li a {
+  }
+  .header .header-menu ul li a {
     background: #fff;
     color: #000;
     display: block;
@@ -55,9 +63,10 @@
     text-align: center;
     border-radius: 50%;
     transition: 0.3s;
-}
-
-.header .header-menu ul li a:hover {
-    background: #4CCEE8;
+  }
+  
+  .header .header-menu ul li a:hover {
+    background: #4ccee8;
     color: #fff;
-}
+  }
+  
