--- a/client/src/page/Admin/FilmAdmin/FilmAdmin.module.scss
+++ b/client/src/page/Admin/FilmAdmin/FilmAdmin.module.scss
@@ -16,6 +16,7 @@
   border-collapse: collapse;
   margin: 25px 0;
   font-size: 15px;
+  min-width: 100%;
   width: 100%;
   max-width: 1230px;
   overflow: hidden;
@@ -75,6 +76,10 @@
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.3);
   width: 250px;
   margin-left: 80%;
+}
+
+.search:hover input {
+  width: 250px;
 
   &:hover input {
     width: 100%;
@@ -165,6 +170,20 @@
   font-size: 18px;
 }
 
+.radio-box {
+  color: #333;
+  font-weight: bold;
+  font-family: "Roboto", sans-serif;
+  font-size: 18px;
+  margin: 20px 0px;
+}
+
+.radio-label {
+  padding-left: 10px;
+  font-weight: normal;
+  font-size: 16px;
+}
+
 .form :where(.input-box input, .select-box) {
   position: relative;
   height: 40px;
@@ -186,6 +205,19 @@
 .form .column {
   display: flex;
   column-gap: 15px;
+}
+
+.select-box {
+  display: flex;
+  align-items: center;
+
+  input:not(:first-child) {
+    margin-left: 16px;
+  }
+
+  label {
+    margin-left: 4px;
+  }
 }
 
 .form .status-box {
@@ -249,6 +281,25 @@
   background: #8fc5e9;
 }
 
+.add-film {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+}
+
+.preview {
+  width: 460px;
+  height: 460px;
+  max-width: 460px;
+  max-height: 460px;
+
+  img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
 .wrapper {
   width: 650px;
   background-color: #242424;
@@ -258,6 +309,7 @@
   font-size: 1.6rem;
   height: 500px;
   overflow-y: auto;
+
   .search-list {
     width: 100%;
     margin-top: 8px;
